--- a/index.html
+++ b/index.html
@@ -18,92 +18,206 @@
 <body>
     <header>
         <nav class="nav">
-            <h3>Kamrul Islam Apurba </h3>
-            <a href=""><button>Download Resume</button></a>
+            <h3 style="font-size: 35px; font-weight:bolder;">Kamrul Islam Apurba </h3>
+            <a href="My resume.pdf"><button id="btn1">Download Resume</button></a>
         </nav>
     </header>
 
     <main>
-        <div class="banner">
+        <!-- banner -->
+        <section class="banner">
             <img src="assets/Group.png" alt="group">
-            <h1>"In the near future, I hope to become a Developer."</h1>
-            <p>
+            <h1 id="h1">"In the near future, I hope to become a Developer."</h1>
+            <p id="baner-p">
                 Hello, I am Apurba. I am learning Web developing with Programing Hero. In the near future, I hope to
                 become a Developer. I will try my best!
             </p>
-            <a href=""><button>Contact with me</button></a>
-        </div>
-
-        <div class="w-w-devo">
+            <a href=""><button id="banner-btn">Contact with me</button></a>
+        </section>
+        <!-- why web development -->
+        <section class="w-w-devo">
             <div>
-                <h1></h1>
-                <p></p>
+                <h1 style="font-size: 32px; font-weight: 800;">
+                    Why Web Development??
+                </h1>
+                <p style="width: 852px; height: 52px;margin: 0 auto; margin-top: 24px;">
+                    Web development can range from developing a simple single static page of plain text to complex web
+                    applications, electronic businesses, and social network services.
+                </p>
             </div>
-            <div>
-                <div>
-
+            <div class="Layer_1-3">
+                <div style="text-align: left;">
+                    <h3 class="l2h">I will Do Coding and Change The World</h3>
+                    <p class="l2p">
+                        Im learning coding to tomake a different tings. I will make a change in web development.
+                    </p>
+                    <a href=""><button class="l2btn">Learn More</button></a>
                 </div>
-                <img src="" alt="">
+
+                <img src="assets/Layer_1.png" alt="">
             </div>
-            <div>
-                <div>
 
-                </div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <div>
+            <div class="Layer_2">
+                <img src="assets/Group 3.png" alt="">
+                <div style="text-align: left;">
+                    <h3 class="l2h">I will help People by creating
+                        Modern Web System</h3>
 
-                </div>
-                <img src="" alt="">
-            </div>
-        </div>
+                    <p class="l2p">
+                        Im trying to learn coding to make mordern tings. My goal is creat mordern wed site for the help
+                        of people.
+                    </p>
 
-        <div class="my-c-tar">
-            <h1></h1>
-            <p></p>
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <h1></h1>
-                    <p></p>
-                    <a href=""></a>
+                    <a href=""><button class="l2btn">Learn More</button></a>
                 </div>
             </div>
-        </div>
 
-        <div class="my-n-tar">
+            <div class="Layer_1-3">
+                <div style="text-align: left;">
+                    <h3 class="l2h">I will Do Coding to make new
+                        Changes in The World</h3>
+                    <p class="l2p">
+                        Im dream is make a change in coding World. I will make changes in web development entirely.
+                    </p>
+                    <a href=""><button class="l2btn">Learn More</button></a>
+                </div>
+
+                <img src="assets/Group 4.png" alt="">
+            </div>
+        </section>
+        <!-- my inspirations -->
+        <section class="my-inspi">
+            <h1 style="font-size: 32px; font-weight: 800;">My Inspiration</h1>
+
+            <p style="text-align: center; margin-top: 24px; width: 852px;">
+                My Inspiration for learning web development came from this video of Jhankar Mahbub Sir.If you wants to
+                be a web developer, this video is for you!!
+            </p>
+
+            <iframe class="ytv" width=1080px; height=554px;
+                src="https://www.youtube.com/embed/DGHn2uOAVCE?si=nfzKvzj5Ij4Zr4zY" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <!-- My current target -->
+        <section class="my-c-tar">
             <div>
+                <h1 style="font-size: 32px; font-weight: 800; text-align: center;">
+                    My Current Target
+                </h1>
+                <p
+                    style="width: 852px; height: 52px;margin: 0 auto; margin-top: 24px; text-align: center; color: rgb(13, 19, 33);">
+                    My Current Target is to learn Web development properly.
+                    So now I'm learning HTML, CSS & Javascript.
+                </p>
+            </div>
+
+            <div class="mct">
+
+                <div class="mct_e" style="background-color:  rgba(255, 76, 30, 0.05);">
+                    <img src="assets/html.png" alt="">
+                    <div style="text-align: left;">
+                        <h3 class="d3h">HTML</h3>
+                        <p class="d3p">
+                            HyperText Markup Language (HTML) is the standard markup language for documents designed to
+                            be displayed in a web browser....
+                        </p>
+                        <a href="" class="l-m">Learn More</a>
+                    </div>
+
+
+                </div>
+
+                <div class="mct_e" style="background-color:rgba(0, 76, 232, 0.05) ;">
+                    <img src="assets/css.png" alt="">
+                    <div style="text-align: left;">
+                        <h3 class="d3h">CSS</h3>
+
+                        <p class="d3p">
+                            Cascading Style Sheets (CSS) is a style sheet language used for specifying & styling for a
+                            markup language....
+                        </p>
+
+                        <a href="" class="l-m">Learn More</a>
+                    </div>
+                </div>
+
+                <div class="mct_e" style="background-color:rgba(255, 223, 0, 0.05) ;">
+                    <img src="assets/js.png" alt="">
+                    <div style="text-align: left;">
+                        <h3 class="d3h">JavaScript</h3>
+                        <p class="d3p">
+                            JavaScript, often abbreviated as JS, is a programming language and core technology of the
+                            Web, alongside HTML and CSS....
+                        </p>
+                        <a href="" class="l-m">Learn More</a>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- My next target -->
+        <section class="my-n-tar">
+            <div>
+                <h1 style="font-size: 32px; font-weight: 800; text-align: center;">
+                    My Next Target
+                </h1>
+                <p style="width: 852px; height: 52px;margin: 0 auto; margin-top: 24px; text-align: center;">
+                    My Next Target is to learn React.JS, Node.Js, JavaScript properly. becaus without knowing this, we
+                    can't code properliy.
+                </p>
+            </div>
+            <div class="mnt-e">
+                <img src="assets/react.png" class="img" alt="">
+                <div style="text-align: left;">
+                    <h3 class="d3h">ReactJS</h3>
+                    <p class="d3p">
+                        React is a free and open-source front-end JavaScript library for building user interfaces based on components by Facebook Inc. It is maintained by Meta....
+                    </p>
+                    <a href="" class="l-m">Learn More</a>
+                </div>
 
             </div>
-            <div>
 
+            <div class="mnt-e">
+                <img src="assets/nodejs.png" class="img" alt="NODEJS" style="height: 90px;">
+
+                <div style="text-align: left;">
+                    <h3 class="d3h">NodeJs</h3>
+
+                    <p class="d3p">
+                        Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows, Linux, Unix, macOS, and more....
+                    </p>
+
+                    <a href="" class="l-m">Learn More</a>
+                </div>
             </div>
-            <div>
 
+            <div class="mnt-e">
+                <img src="assets/mongodb.png" class="img" alt="">
+                <div style="text-align: left;">
+                    <h3 class="d3h">MongoDB</h3>
+                    <p class="d3p">
+                        MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, ....
+                    </p>
+                    <a href="" class="l-m">Learn More</a>
+                </div>
             </div>
-            <div>
+        </section>
 
+        <section class="i-n-sup">
+            <p style="font-size: 38px; font-weight:bold; line-height: 36px;">I need Support</p>
+            <p style="width: 606px; margin: 0 auto;">
+                I am a new student i Programing world. So I need supports of all of experienced Web developer. Help me
+                with your suggestion.
+            </p>
+            <div style="text-align: center;">
+                <input class="sup-box" type="text" placeholder="Suggest me any feedback for me">
+                <input class="sup-btn" type="button" value="Submit">
             </div>
-        </div>
-
-        <div class="i-n-sup">
-            <h1></h1>
-            <p></p>
-            <div></div>
-        </div>
+        </section>
 
     </main>
 
