--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div style="text-align: left;">
                     <h3 class="l2h">I will Do Coding and Change The World</h3>
                     <p class="l2p">
-                        Im learning coding to tomake a different tings. I will make a change in web development.
+                        Im learning coding to to make a different tings. I will make a change in web development.
                     </p>
                     <a href=""><button class="l2btn">Learn More</button></a>
                 </div>
@@ -174,7 +174,8 @@
                 <div style="text-align: left;">
                     <h3 class="d3h">ReactJS</h3>
                     <p class="d3p">
-                        React is a free and open-source front-end JavaScript library for building user interfaces based on components by Facebook Inc. It is maintained by Meta....
+                        React is a free and open-source front-end JavaScript library for building user interfaces based
+                        on components by Facebook Inc. It is maintained by Meta....
                     </p>
                     <a href="" class="l-m">Learn More</a>
                 </div>
@@ -188,7 +189,8 @@
                     <h3 class="d3h">NodeJs</h3>
 
                     <p class="d3p">
-                        Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows, Linux, Unix, macOS, and more....
+                        Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows,
+                        Linux, Unix, macOS, and more....
                     </p>
 
                     <a href="" class="l-m">Learn More</a>
@@ -200,7 +202,8 @@
                 <div style="text-align: left;">
                     <h3 class="d3h">MongoDB</h3>
                     <p class="d3p">
-                        MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, ....
+                        MongoDB is a source-available, cross-platform, document-oriented database program. Classified as
+                        a NoSQL database product, ....
                     </p>
                     <a href="" class="l-m">Learn More</a>
                 </div>
@@ -210,7 +213,7 @@
         <section class="i-n-sup">
             <p style="font-size: 38px; font-weight:bold; line-height: 36px;">I need Support</p>
             <p style="width: 606px; margin: 0 auto;">
-                I am a new student i Programing world. So I need supports of all of experienced Web developer. Help me
+                I am a new student in Programing world. So I need supports of all of experienced Web developer. Help me
                 with your suggestion.
             </p>
             <div style="text-align: center;">
@@ -222,7 +225,16 @@
     </main>
 
     <footer class="footer">
+        <p style="font-size: 20px; font-weight: 600;">An Open Commitment by Kamrul Islam Apurba</p>
+        <div style="display: flex;align-items: center;justify-content: space-between;">
 
+            <a href="https://web.facebook.com/kamrul.islam.apurba"><img class="f-img" src="assets/fb.png" alt="FB"></a>
+
+            <a href="https://github.com/kamrul2006?tab=repositories"><img src="assets/github.png" alt="GITHUB"></a>
+
+            <a href="https://www.instagram.com/kamrul_islam_apurba/"><img class="f-img"  src="assets/insta.png" alt="insta"></a>
+            
+        </div>
     </footer>
 
 </body>
