--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div style="text-align: left;">
                     <h3 class="l2h">I will Do Coding and Change The World</h3>
                     <p class="l2p">
-                        Im learning coding to to make a different tings. I will make a change in web development.
+                        Im learning coding to make a different tings. I will make a change in web development.
                     </p>
                     <a href=""><button class="l2btn">Learn More</button></a>
                 </div>
