Challenge task complate

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Hello, I am Apurba. I am learning Web developing with Programing Hero. In the near future, I hope to
                 become a Developer. I will try my best!
             </p>
-            <a href=""><button id="banner-btn">Contact with me</button></a>
+            <a href="#ftr"><button id="banner-btn">Contact with me</button></a>
         </section>
         <!-- why web development -->
         <section class="w-w-devo">
@@ -224,7 +224,7 @@
 
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="ftr">
         <p style="font-size: 20px; font-weight: 600;">An Open Commitment by Kamrul Islam Apurba</p>
         <div style="display: flex;align-items: center;justify-content: space-between;">
 
