--- a/index.html
+++ b/index.html
@@ -6,34 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 1st Assignment</title>
 
+    <!-- Azeret mono language -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-
+        
+    <!-- CSS Added -->
     <link rel="stylesheet" href="Styles/1st ass.css">
 </head>
 
 <body>
+    <hr>
     <header>
         <nav class="nav">
             <h3 style="font-size: 35px; font-weight:bolder;">Kamrul Islam Apurba </h3>
             <a href="My resume.pdf"><button id="btn1">Download Resume</button></a>
         </nav>
     </header>
-
+    <hr>
     <main>
         <!-- banner -->
         <section class="banner">
             <img src="assets/Group.png" alt="group">
-            <h1 id="h1">"In the near future, I hope to become a Developer."</h1>
+
+            <h1 id="h1">
+                "In the near future, I hope to become a Developer."
+            </h1>
             <p id="baner-p">
                 Hello, I am Apurba. I am learning Web developing with Programing Hero. In the near future, I hope to
                 become a Developer. I will try my best!
             </p>
             <a href="#ftr"><button id="banner-btn">Contact with me</button></a>
-        </section>
+        </section><hr>
         <!-- why web development -->
         <section class="w-w-devo">
             <div>
@@ -93,7 +99,7 @@
                 My Inspiration for learning web development came from this video of Jhankar Mahbub Sir.If you wants to
                 be a web developer, this video is for you!!
             </p>
-
+            <!-- youtube video -->
             <iframe class="ytv" width=1080px; height=554px;
                 src="https://www.youtube.com/embed/DGHn2uOAVCE?si=nfzKvzj5Ij4Zr4zY" title="YouTube video player"
                 frameborder="0"
@@ -107,7 +113,7 @@
                     My Current Target
                 </h1>
                 <p
-                    style="width: 852px; height: 52px;margin: 0 auto; margin-top: 24px; text-align: center; color: rgb(13, 19, 33);">
+                    style="width: 852px; height: 52px; margin: 0 auto; margin-top: 24px; text-align: center; color: rgb(13, 19, 33);">
                     My Current Target is to learn Web development properly.
                     So now I'm learning HTML, CSS & Javascript.
                 </p>
@@ -116,12 +122,12 @@
             <div class="mct">
 
                 <div class="mct_e" style="background-color:  rgba(255, 76, 30, 0.05);">
-                    <img src="assets/html.png" alt="">
+                    <img src="assets/html.png" alt="html">
                     <div style="text-align: left;">
                         <h3 class="d3h">HTML</h3>
                         <p class="d3p">
                             HyperText Markup Language (HTML) is the standard markup language for documents designed to
-                            be displayed in a web browser....
+                            be displayed in a web ....
                         </p>
                         <a href="" class="l-m">Learn More</a>
                     </div>
@@ -130,7 +136,7 @@
                 </div>
 
                 <div class="mct_e" style="background-color:rgba(0, 76, 232, 0.05) ;">
-                    <img src="assets/css.png" alt="">
+                    <img src="assets/css.png" alt="css">
                     <div style="text-align: left;">
                         <h3 class="d3h">CSS</h3>
 
@@ -144,7 +150,7 @@
                 </div>
 
                 <div class="mct_e" style="background-color:rgba(255, 223, 0, 0.05) ;">
-                    <img src="assets/js.png" alt="">
+                    <img src="assets/js.png" alt="js">
                     <div style="text-align: left;">
                         <h3 class="d3h">JavaScript</h3>
                         <p class="d3p">
@@ -223,7 +229,7 @@
         </section>
 
     </main>
-
+    <!-- footer starts -->
     <footer class="footer" id="ftr">
         <p style="font-size: 20px; font-weight: 600;">An Open Commitment by Kamrul Islam Apurba</p>
         <div style="display: flex;align-items: center;justify-content: space-between;">
@@ -232,8 +238,9 @@
 
             <a href="https://github.com/kamrul2006?tab=repositories"><img src="assets/github.png" alt="GITHUB"></a>
 
-            <a href="https://www.instagram.com/kamrul_islam_apurba/"><img class="f-img"  src="assets/insta.png" alt="insta"></a>
-            
+            <a href="https://www.instagram.com/kamrul_islam_apurba/"><img class="f-img" src="assets/insta.png"
+                    alt="insta"></a>
+
         </div>
     </footer>
 
